report8/exr/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET var vars EQ expr SEMISEMI
   4           | LET REC var var EQ expr SEMISEMI

   5  expr : LET var EQ expr IN expr
   6       | LET var vars EQ expr IN expr
   7       | LET REC var var EQ expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | FUN var ARROW expr
  10       | FUN var vars ARROW expr
  11       | DFUN var ARROW expr
  12       | arith_expr EQ arith_expr
  13       | arith_expr LT arith_expr
  14       | list_expr

  15  list_expr : arith_expr CONS list_expr
  16            | arith_expr

  17  arith_expr : arith_expr PLUS factor_expr
  18             | arith_expr MINUS factor_expr
  19             | factor_expr

  20  factor_expr : factor_expr TIMES app_expr
  21              | factor_expr DIV app_expr
  22              | app_expr

  23  app_expr : app_expr atomic_expr
  24           | atomic_expr

  25  atomic_expr : INT
  26              | BOOL
  27              | LPAR expr COMMA expr RPAR
  28              | LBRACKET RBRACKET
  29              | ID
  30              | LPAR expr RPAR

  31  vars : var vars
  32       | var

  33  var : ID

  34  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (34)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	toplevel  goto 12
	expr  goto 13
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (25)

	.  reduce 25


state 4
	atomic_expr : BOOL .  (26)

	.  reduce 26


state 5
	atomic_expr : ID .  (29)

	.  reduce 29


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . var vars EQ expr SEMISEMI  (3)
	toplevel : LET . REC var var EQ expr SEMISEMI  (4)
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . var vars EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 19
	REC  shift 20
	.  error

	var  goto 21


state 7
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 23
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 8
	atomic_expr : LPAR . expr COMMA expr RPAR  (27)
	atomic_expr : LPAR . expr RPAR  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 24
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 9
	expr : FUN . var ARROW expr  (9)
	expr : FUN . var vars ARROW expr  (10)

	ID  shift 19
	.  error

	var  goto 25


state 10
	expr : DFUN . var ARROW expr  (11)

	ID  shift 19
	.  error

	var  goto 26


state 11
	atomic_expr : LBRACKET . RBRACKET  (28)

	RBRACKET  shift 27
	.  error


state 12
	%entry% : '\001' toplevel .  (34)

	.  reduce 34


state 13
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 28
	.  error


state 14
	expr : arith_expr . EQ arith_expr  (12)
	expr : arith_expr . LT arith_expr  (13)
	list_expr : arith_expr . CONS list_expr  (15)
	list_expr : arith_expr .  (16)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 29
	MINUS  shift 30
	EQ  shift 31
	LT  shift 32
	CONS  shift 33
	IN  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	COMMA  reduce 16
	SEMISEMI  reduce 16


state 15
	expr : list_expr .  (14)

	.  reduce 14


state 16
	arith_expr : factor_expr .  (19)
	factor_expr : factor_expr . TIMES app_expr  (20)
	factor_expr : factor_expr . DIV app_expr  (21)

	TIMES  shift 34
	DIV  shift 35
	IN  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	EQ  reduce 19
	LT  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	CONS  reduce 19
	COMMA  reduce 19
	SEMISEMI  reduce 19


state 17
	factor_expr : app_expr .  (22)
	app_expr : app_expr . atomic_expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 22
	PLUS  reduce 22
	TIMES  reduce 22
	MINUS  reduce 22
	DIV  reduce 22
	EQ  reduce 22
	LT  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	RPAR  reduce 22
	CONS  reduce 22
	COMMA  reduce 22
	SEMISEMI  reduce 22

	atomic_expr  goto 36


state 18
	app_expr : atomic_expr .  (24)

	.  reduce 24


state 19
	var : ID .  (33)

	.  reduce 33


state 20
	toplevel : LET REC . var var EQ expr SEMISEMI  (4)
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 19
	.  error

	var  goto 37


state 21
	toplevel : LET var . EQ expr SEMISEMI  (2)
	toplevel : LET var . vars EQ expr SEMISEMI  (3)
	expr : LET var . EQ expr IN expr  (5)
	expr : LET var . vars EQ expr IN expr  (6)

	ID  shift 19
	EQ  shift 38
	.  error

	var  goto 39
	vars  goto 40


state 22
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . var vars EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 19
	REC  shift 41
	.  error

	var  goto 42


state 23
	expr : IF expr . THEN expr ELSE expr  (8)

	THEN  shift 43
	.  error


state 24
	atomic_expr : LPAR expr . COMMA expr RPAR  (27)
	atomic_expr : LPAR expr . RPAR  (30)

	RPAR  shift 44
	COMMA  shift 45
	.  error


state 25
	expr : FUN var . ARROW expr  (9)
	expr : FUN var . vars ARROW expr  (10)

	ID  shift 19
	ARROW  shift 46
	.  error

	var  goto 39
	vars  goto 47


state 26
	expr : DFUN var . ARROW expr  (11)

	ARROW  shift 48
	.  error


state 27
	atomic_expr : LBRACKET RBRACKET .  (28)

	.  reduce 28


state 28
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 29
	arith_expr : arith_expr PLUS . factor_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	factor_expr  goto 49
	app_expr  goto 17
	atomic_expr  goto 18


state 30
	arith_expr : arith_expr MINUS . factor_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	factor_expr  goto 50
	app_expr  goto 17
	atomic_expr  goto 18


state 31
	expr : arith_expr EQ . arith_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 51
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 32
	expr : arith_expr LT . arith_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 52
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 33
	list_expr : arith_expr CONS . list_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	arith_expr  goto 53
	list_expr  goto 54
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 34
	factor_expr : factor_expr TIMES . app_expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	app_expr  goto 55
	atomic_expr  goto 18


state 35
	factor_expr : factor_expr DIV . app_expr  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	.  error

	app_expr  goto 56
	atomic_expr  goto 18


state 36
	app_expr : app_expr atomic_expr .  (23)

	.  reduce 23


state 37
	toplevel : LET REC var . var EQ expr SEMISEMI  (4)
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 19
	.  error

	var  goto 57


state 38
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 58
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 39
	vars : var . vars  (31)
	vars : var .  (32)

	ID  shift 19
	EQ  reduce 32
	ARROW  reduce 32

	var  goto 39
	vars  goto 59


state 40
	toplevel : LET var vars . EQ expr SEMISEMI  (3)
	expr : LET var vars . EQ expr IN expr  (6)

	EQ  shift 60
	.  error


state 41
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 19
	.  error

	var  goto 61


state 42
	expr : LET var . EQ expr IN expr  (5)
	expr : LET var . vars EQ expr IN expr  (6)

	ID  shift 19
	EQ  shift 62
	.  error

	var  goto 39
	vars  goto 63


state 43
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 64
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 44
	atomic_expr : LPAR expr RPAR .  (30)

	.  reduce 30


state 45
	atomic_expr : LPAR expr COMMA . expr RPAR  (27)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 65
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 46
	expr : FUN var ARROW . expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 66
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 47
	expr : FUN var vars . ARROW expr  (10)

	ARROW  shift 67
	.  error


state 48
	expr : DFUN var ARROW . expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 68
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 49
	arith_expr : arith_expr PLUS factor_expr .  (17)
	factor_expr : factor_expr . TIMES app_expr  (20)
	factor_expr : factor_expr . DIV app_expr  (21)

	TIMES  shift 34
	DIV  shift 35
	IN  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	CONS  reduce 17
	COMMA  reduce 17
	SEMISEMI  reduce 17


state 50
	arith_expr : arith_expr MINUS factor_expr .  (18)
	factor_expr : factor_expr . TIMES app_expr  (20)
	factor_expr : factor_expr . DIV app_expr  (21)

	TIMES  shift 34
	DIV  shift 35
	IN  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	CONS  reduce 18
	COMMA  reduce 18
	SEMISEMI  reduce 18


state 51
	expr : arith_expr EQ arith_expr .  (12)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 29
	MINUS  shift 30
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	COMMA  reduce 12
	SEMISEMI  reduce 12


state 52
	expr : arith_expr LT arith_expr .  (13)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 29
	MINUS  shift 30
	IN  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	COMMA  reduce 13
	SEMISEMI  reduce 13


state 53
	list_expr : arith_expr . CONS list_expr  (15)
	list_expr : arith_expr .  (16)
	arith_expr : arith_expr . PLUS factor_expr  (17)
	arith_expr : arith_expr . MINUS factor_expr  (18)

	PLUS  shift 29
	MINUS  shift 30
	CONS  shift 33
	IN  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	COMMA  reduce 16
	SEMISEMI  reduce 16


state 54
	list_expr : arith_expr CONS list_expr .  (15)

	.  reduce 15


state 55
	factor_expr : factor_expr TIMES app_expr .  (20)
	app_expr : app_expr . atomic_expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 20
	PLUS  reduce 20
	TIMES  reduce 20
	MINUS  reduce 20
	DIV  reduce 20
	EQ  reduce 20
	LT  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	CONS  reduce 20
	COMMA  reduce 20
	SEMISEMI  reduce 20

	atomic_expr  goto 36


state 56
	factor_expr : factor_expr DIV app_expr .  (21)
	app_expr : app_expr . atomic_expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 11
	IN  reduce 21
	PLUS  reduce 21
	TIMES  reduce 21
	MINUS  reduce 21
	DIV  reduce 21
	EQ  reduce 21
	LT  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	RPAR  reduce 21
	CONS  reduce 21
	COMMA  reduce 21
	SEMISEMI  reduce 21

	atomic_expr  goto 36


state 57
	toplevel : LET REC var var . EQ expr SEMISEMI  (4)
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 69
	.  error


state 58
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 70
	SEMISEMI  shift 71
	.  error


state 59
	vars : var vars .  (31)

	.  reduce 31


state 60
	toplevel : LET var vars EQ . expr SEMISEMI  (3)
	expr : LET var vars EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 72
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 61
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 19
	.  error

	var  goto 73


state 62
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 74
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 63
	expr : LET var vars . EQ expr IN expr  (6)

	EQ  shift 75
	.  error


state 64
	expr : IF expr THEN expr . ELSE expr  (8)

	ELSE  shift 76
	.  error


state 65
	atomic_expr : LPAR expr COMMA expr . RPAR  (27)

	RPAR  shift 77
	.  error


state 66
	expr : FUN var ARROW expr .  (9)

	.  reduce 9


state 67
	expr : FUN var vars ARROW . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 78
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 68
	expr : DFUN var ARROW expr .  (11)

	.  reduce 11


state 69
	toplevel : LET REC var var EQ . expr SEMISEMI  (4)
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 79
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 70
	expr : LET var EQ expr IN . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 80
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 71
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 72
	toplevel : LET var vars EQ expr . SEMISEMI  (3)
	expr : LET var vars EQ expr . IN expr  (6)

	IN  shift 81
	SEMISEMI  shift 82
	.  error


state 73
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 83
	.  error


state 74
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 70
	.  error


state 75
	expr : LET var vars EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 84
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 76
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 85
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 77
	atomic_expr : LPAR expr COMMA expr RPAR .  (27)

	.  reduce 27


state 78
	expr : FUN var vars ARROW expr .  (10)

	.  reduce 10


state 79
	toplevel : LET REC var var EQ expr . SEMISEMI  (4)
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 86
	SEMISEMI  shift 87
	.  error


state 80
	expr : LET var EQ expr IN expr .  (5)

	.  reduce 5


state 81
	expr : LET var vars EQ expr IN . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 88
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 82
	toplevel : LET var vars EQ expr SEMISEMI .  (3)

	.  reduce 3


state 83
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 89
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 84
	expr : LET var vars EQ expr . IN expr  (6)

	IN  shift 81
	.  error


state 85
	expr : IF expr THEN expr ELSE expr .  (8)

	.  reduce 8


state 86
	expr : LET REC var var EQ expr IN . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 22
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	LBRACKET  shift 11
	.  error

	expr  goto 90
	arith_expr  goto 14
	list_expr  goto 15
	factor_expr  goto 16
	app_expr  goto 17
	atomic_expr  goto 18


state 87
	toplevel : LET REC var var EQ expr SEMISEMI .  (4)

	.  reduce 4


state 88
	expr : LET var vars EQ expr IN expr .  (6)

	.  reduce 6


state 89
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 86
	.  error


state 90
	expr : LET REC var var EQ expr IN expr .  (7)

	.  reduce 7


29 terminals, 11 nonterminals
35 grammar rules, 91 states
